Archive2/db/8f738b221c8232/output
main.cpp:155:29: error: expected ‘class’ before ‘Storage’
 template<template <class T> Storage
                             ^
main.cpp:156:1: error: expected ‘>’ before ‘int’
 int main()
 ^
main.cpp:157:1: error: expected unqualified-id before ‘{’ token
 {
 ^
